samples/_failures_safe/1761196419_d6194d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c769b991.c: In function ‘main’:
./samples/SAFE/__tmp_c769b991.c:160:16: error: ‘EX’ undeclared (first use in this function)
  160 |         return EX
      |                ^~
./samples/SAFE/__tmp_c769b991.c:160:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_c769b991.c:160:18: error: expected ‘;’ at end of input
  160 |         return EX
      |                  ^
      |                  ;
./samples/SAFE/__tmp_c769b991.c:160:9: error: expected declaration or statement at end of input
  160 |         return EX
      |         ^~~~~~
./samples/SAFE/__tmp_c769b991.c:160:9: error: expected declaration or statement at end of input
